# SnowSimulator

./: CMakeLists.txt  Partical.cpp  Partical.h  Particle.cpp  glad.c  main.cpp
include/: Particle.h
lib/glad/: CMakeLists.txt
src/: Particle.cpp  main.cpp
